2010-05-19  Per Bothner  <per@bothner.com>

	* Keyword.java (keywordNamespace): Namespace constructors are
	now protected; use factory method instead.

2010-05-07  Per Bothner  <per@bothner.com>

	Avoid writing imported "source" class if current.  I.e. if required
	using a source file name, we parse it to check for dependencies.
	* Compilation.java (explicit): New boolean.
	(process): Don't compile and write class if class is current.
	* Language.java (PARSE_EXPLICIT): New flag.
	(parse): Set Compilation#explicit if PARSE_EXPLICIT set.
	* ModuleInfo.java (checkCurrent): Don't quickly return true if comp is
	non-null (callers should check comp instead to guard against cycles).
	However, do quickly return false if classname is null.

2010-05-06  Per Bothner  <per@bothner.com>

	Fix issue where required modules inherit --aplet and --servlet options.
	* Compilation.java (generateAppletDefault, generateServletDefault):
	Remove static fields.
	* Language.java (PARSE_FOR_APPLET, PARSE_FOR_SERVLET): New flags.
	(parse): Use these to set Compilation.generateApplet
	and generateServlet.

2010-04-18  Per Bothner  <per@bothner.com>

	* ModuleContext.java (flag): New field.
	(IN_HTTP_SERVER, IN_SERVLET): New flags.
	(getFlags, setFlags, addFlags): New methods.
	* ModuleInfo.java (cleanupAfterCompilation): New convenience methods.

2010-04-05  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule1): Call module resolve and walk using
	Compilation 'process' mechanism.  This makes things both simpler
	and more robust in different scenarios, such as servlets.
	* Compilation.java (addMainClass): Don't set mustCompile - we shouldn't
	be calling addMainClass otherwise.

2010-04-02  Per Bothner  <per@bothner.com>

	* TryExp.java (apply): Add support for interpreting catch-clauses.
	(mustCompile): Now always return false.
	* CatchClause.java: Noew extends LetExpr.
	(evalVariable): New hook to get exception passed from TryExpr.apply.
	* LetExp.java (evalVariable): New hook.
